2026R1/Mechanical-ACT-API-26-r1/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/BeamSecBlockCommand.md
# `BeamSecBlockCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.BeamSecBlockCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.BeamSecBlockCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a beam SECBLOCK command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|-----------------------------------------|----------------------------------|
| [`Cells`](#BeamSecBlockCommand.Cells)   | Gets the cells of the section.   |
| [`Index`](#BeamSecBlockCommand.Index)   | Gets the command index.          |
| [`Name`](#BeamSecBlockCommand.Name)     | Gets the command name.           |
| [`Nodes`](#BeamSecBlockCommand.Nodes)   | Gets the nodes of the section.   |
| [`Type`](#BeamSecBlockCommand.Type)     | Gets the section type.           |

<a id="property-detail"></a>

## Property detail

<a id="BeamSecBlockCommand.Cells"></a>

### *property* BeamSecBlockCommand.Cells *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandCell](CommandCell.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandCell)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the cells of the section.

<!-- !! processed by numpydoc !! -->

<a id="BeamSecBlockCommand.Index"></a>

### *property* BeamSecBlockCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="BeamSecBlockCommand.Name"></a>

### *property* BeamSecBlockCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="BeamSecBlockCommand.Nodes"></a>

### *property* BeamSecBlockCommand.Nodes *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNode](CommandNode.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNode)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the nodes of the section.

<!-- !! processed by numpydoc !! -->

<a id="BeamSecBlockCommand.Type"></a>

### *property* BeamSecBlockCommand.Type *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the section type.

<!-- !! processed by numpydoc !! -->

